# 3d-washing-machine-model

./: CMakeLists.txt  README.md
inc/config/: globals.hpp
inc/core/: input.hpp
inc/model/: control_knob.hpp  door.hpp  door_hinge.hpp  drum.hpp  tank.hpp  washer.hpp  washer_body.hpp
inc/scene/: display.hpp  lighting.hpp  projection.hpp  scene.hpp
inc/utils/: console.hpp  math.hpp  texture.hpp
src/: main.cpp
src/config/: globals.cpp
src/core/: input.cpp
src/model/: control_knob.cpp  door.cpp  door_hinge.cpp  drum.cpp  tank.cpp  washer.cpp  washer_body.cpp
src/scene/: display.cpp  lighting.cpp  projection.cpp  scene.cpp
src/utils/: console.cpp  math.cpp  texture.cpp
